logs/django-livesettings.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_livesettings-1.4.post16.egg-info'...
Listing './lib/python3.5/site-packages/livesettings'...
Compiling './lib/python3.5/site-packages/livesettings/functions.py'...
***   File "./lib/python3.5/site-packages/livesettings/functions.py", line 30
    raise AttributeError, key
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/livesettings/locale'...
Listing './lib/python3.5/site-packages/livesettings/locale/de'...
Listing './lib/python3.5/site-packages/livesettings/locale/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/livesettings/locale/en'...
Listing './lib/python3.5/site-packages/livesettings/locale/en/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/livesettings/locale/es'...
Listing './lib/python3.5/site-packages/livesettings/locale/es/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/livesettings/locale/fr'...
Listing './lib/python3.5/site-packages/livesettings/locale/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/livesettings/locale/he'...
Listing './lib/python3.5/site-packages/livesettings/locale/he/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/livesettings/locale/it'...
Listing './lib/python3.5/site-packages/livesettings/locale/it/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/livesettings/locale/ko'...
Listing './lib/python3.5/site-packages/livesettings/locale/ko/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/livesettings/locale/pl'...
Listing './lib/python3.5/site-packages/livesettings/locale/pl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/livesettings/locale/pt_BR'...
Listing './lib/python3.5/site-packages/livesettings/locale/pt_BR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/livesettings/locale/ru'...
Listing './lib/python3.5/site-packages/livesettings/locale/ru/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/livesettings/locale/sv'...
Listing './lib/python3.5/site-packages/livesettings/locale/sv/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/livesettings/locale/tr'...
Listing './lib/python3.5/site-packages/livesettings/locale/tr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/livesettings/migrations'...
Compiling './lib/python3.5/site-packages/livesettings/models.py'...
***   File "./lib/python3.5/site-packages/livesettings/models.py", line 32
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/livesettings/templates'...
Listing './lib/python3.5/site-packages/livesettings/templates/livesettings'...
Listing './lib/python3.5/site-packages/livesettings/templatetags'...
Compiling './lib/python3.5/site-packages/livesettings/values.py'...
***   File "./lib/python3.5/site-packages/livesettings/values.py", line 375
    except SettingNotSet, sns:
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
